--- a/controller_manager_tests/CMakeLists.txt
+++ b/controller_manager_tests/CMakeLists.txt
@@ -38,14 +38,13 @@ if(CATKIN_ENABLE_TESTING)
   target_link_libraries(dummy_app ${PROJECT_NAME} ${catkin_LIBRARIES})
 
   add_executable(cm_test EXCLUDE_FROM_ALL test/cm_test.cpp)
-  add_dependencies(tests cm_test)
   target_link_libraries(cm_test ${catkin_LIBRARIES} ${GTEST_LIBRARIES})
-
-  add_rostest(test/cm_test.test)
 
   catkin_add_nosetests(test)
 
+  add_rostest(test/cm_test.test DEPENDENCIES dummy_app cm_test)
+
   add_rostest(test/cm_msgs_utils_rostest.test)
 
-  add_rostest(test/controller_manager_scripts.test)
+  add_rostest(test/controller_manager_scripts.test DEPENDENCIES dummy_app)
 endif()
