Add missing roscpp & rospy dependencies

--- a/controller_manager/package.xml
+++ b/controller_manager/package.xml
@@ -22,6 +22,7 @@
   <depend>controller_manager_msgs</depend>
   <depend>hardware_interface</depend>
   <depend>pluginlib</depend>
+  <depend>roscpp</depend>
 
   <test_depend>rostest</test_depend>
 </package>
