--- a/rqt_controller_manager/package.xml
+++ b/rqt_controller_manager/package.xml
@@ -20,6 +20,7 @@
 
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rospy</exec_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
