--- a/rqt_controller_manager/CMakeLists.txt
+++ b/rqt_controller_manager/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(rqt_controller_manager)
 
 # Load catkin and all dependencies required for this package
-find_package(catkin REQUIRED COMPONENTS)
+find_package(catkin REQUIRED)
 
 catkin_python_setup()
 
