Remove liburdfdom-dev

--- a/joint_limits_interface/CMakeLists.txt
+++ b/joint_limits_interface/CMakeLists.txt
@@ -8,9 +8,6 @@ find_package(catkin REQUIRED COMPONENTS
   urdf
 )
 
-# Include urdfdom
-find_package(urdfdom REQUIRED) # TODO: Delete
-
 # Declare a catkin package
 catkin_package(
   INCLUDE_DIRS
@@ -19,8 +16,6 @@ catkin_package(
     hardware_interface
     roscpp
     urdf
-  DEPENDS
-    urdfdom
 )
 
 
@@ -29,7 +24,7 @@ catkin_package(
 ###########
 
 # Specify header include paths
-include_directories(include ${catkin_INCLUDE_DIRS} ${urdfdom_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS})
 
 
 #############
@@ -40,16 +35,16 @@ if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
 
   catkin_add_gtest(joint_limits_interface_test test/joint_limits_interface_test.cpp)
-  target_link_libraries(joint_limits_interface_test ${catkin_LIBRARIES} ${urdfdom_LIBRARIES})
+  target_link_libraries(joint_limits_interface_test ${catkin_LIBRARIES})
 
   catkin_add_gtest(joint_limits_urdf_test test/joint_limits_urdf_test.cpp)
-  target_link_libraries(joint_limits_urdf_test ${catkin_LIBRARIES} ${urdfdom_LIBRARIES})
+  target_link_libraries(joint_limits_urdf_test ${catkin_LIBRARIES})
 
   add_rostest_gtest(joint_limits_rosparam_test
     test/joint_limits_rosparam.test
     test/joint_limits_rosparam_test.cpp
   )
-  target_link_libraries(joint_limits_rosparam_test ${catkin_LIBRARIES} ${urdfdom_LIBRARIES})
+  target_link_libraries(joint_limits_rosparam_test ${catkin_LIBRARIES})
 endif()
 
 
