--- a/controller_manager_msgs/package.xml
+++ b/controller_manager_msgs/package.xml
@@ -22,4 +22,6 @@
   <build_depend>message_generation</build_depend>
 
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>rosservice</exec_depend>
+  <exec_depend>rospy</exec_depend>
 </package>
