--- a/hardware_interface/CMakeLists.txt
+++ b/hardware_interface/CMakeLists.txt
@@ -15,6 +15,8 @@ catkin_package(
     include
   CATKIN_DEPENDS
     roscpp
+  DEPENDS
+    Boost # TODO: Should header-only dependencies be DEPENDS or INCLUDE_DIRS?
 )
 
 
